--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="author" content="" />
         <title>ROLF: Introducing Massage Therapy</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <meta content="ROLF: Introducing Massage Therapy" property="og:title" />
+        <meta content="The fast, easy and effective antidote to workplace stress" property="og:description" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
