--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ROLF: Introducing Massage Therapy</title>
+        <title>ROLF.FIT: Introducing Massage Therapy</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <meta content="ROLF: Introducing Massage Therapy" property="og:title" />
+        <meta content="ROLF.FIT: Introducing Massage Therapy" property="og:title" />
         <meta content="The fast, easy and effective antidote to workplace stress" property="og:description" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -21,8 +21,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">ROLF</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <a class="navbar-brand" href="#page-top">ROLF.FIT</a>
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <!-- <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#!">Sign Up</a></li>
@@ -84,7 +84,6 @@
                         <div class="p-5">
                             <h2 class="display-4">Special Chair Therapy</h2>
                             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p> -->
-                            <ul>
                                 <li>
                                     Seated head, neck, shoulder and back massage therapy
                                 </li>
@@ -97,7 +96,6 @@
                                 <li>
                                     Each massage is concluded with a re-energising facial spritz
                                 </li>
-                            </ul>
                         </div>
                     </div>
                 </div>
