--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+
         <title>ROLF.FIT: Introducing Massage Therapy</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <meta content="ROLF.FIT: Introducing Massage Therapy" property="og:title" />
@@ -15,7 +19,7 @@
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css?v=1.0.0" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -121,6 +125,35 @@
                             <li>
                                 Follow strict hygiene processes
                             </li>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-black">
+            <div class="container px-5 ">
+                <div class="row gx-5 align-items-center ">
+                    <div class="col-lg-12 ">
+                        <h3 class="p-5 text-center large">
+                            Our upcoming services
+                        </h3>
+                    </div>
+                    <div class="col-lg-6  p-5">
+                        <div class="bg-dogs">
+                            <div class="text-over-image">
+                                <h3 class="m-0">Nutritional Meals</h3>
+                                <span>A touch of perfection, blended with innovation and balanced with nutrients and care.</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6  p-5">
+                        <div class="bg-lunch">
+                            <div class="text-over-image">
+                                <h3 class="m-0">Puppy Therapy</h3>
+                                <span>
+                                    A paws in work session to play, laugh and relax with some new best friends.
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
